[project]
name = "pksha-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "gunicorn>=23.0.0",
    "langchain>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-openai>=0.3.27",
    "line-bot-sdk>=3",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.16.0",
    "uvicorn>=0.35.0",
]
